fixed a bug that caused the game to get stuck

--- a/ultimateTTT.css
+++ b/ultimateTTT.css
@@ -99,10 +99,37 @@ body{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     /*background-color: rgb(161, 145, 125); */
-    
-    
-    
+}
 
+#mobile{
+    display: none;
+}
+#mobileNote{
+    display: none;
+}
+
+@media only screen and (max-width: 768px) {
+    #mobile{
+       display: block;
+    }
+    #mobileNote{
+        display: block;
+    }
+    .topBTN{
+        display: none;
+    }
+    .mobileBTN{
+        margin-left: 2%;
+        font-family: KHMenu;
+        font-size: large;
+        padding: .2%;
+        position: relative;
+        top: 10px; 
+        cursor: pointer;  
+        display: inline;
+    }
+
+    
 }
 
 
